--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,9 @@
 name = "harparse"
 version = "0.0.1"
 description = "HAR file parser and extractor"
-authors = ["James Hogkinson <james@terminaloutcomes.com>"]
+authors = [
+    "James Hogkinson <james@terminaloutcomes.com>",
+]
 license = "MIT"
 
 [tool.poetry.dependencies]
@@ -15,9 +17,20 @@ black = "^22.1.0"
 pytest = "^7.1.1"
 mypy = "^0.942"
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
 [tool.poetry.scripts]
 harparse = "harparse.__main__:cli"
+
+[build-system]
+requires = [
+    "poetry-core>=1.0.0",
+]
+build-backend = "poetry.core.masonry.api"
+
+[project]
+name = "harparse"
+description = "HAR file parser and extractor"
+license = "MIT"
+version = "0.0.1"
+authors = [
+    { name = "James Hogkinson", email = "james@terminaloutcomes.com" },
+]
